--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,5 +42,5 @@ jobs:
           echo what about build tools
           mvn --version
           gradle --version
-          ant --version
+          ant -version
           
