--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,15 +32,37 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo what is in this dir
+          echo 1 what is in this dir
           ls -a
           echo 
-          echo is java installed?
+          echo 2 is java installed?
           java -version
-          echo Is Git installed
+          echo
+          echo 3 Is Git installed
+          echo
           git --version
-          echo what about build tools
+          echo
+          echo 4 what about build tools
           mvn --version
           gradle --version
           ant -version
+          echo 
+          echo 5 where android sdk root
+          echo $ANDROID_SDK_ROOT
+          echo
+          echo 6 where is selenium jars
+          echo $SELENIUM_JAR_PATH
+          echo
+          echo 7 where is workspace location
+          echo $RUNNER_WORKSPACE
+          echo
+          echo 8 who ami
+          whoami
+          echo
+          echo 9 layout
+          df
+          echo
+          wcho 10 envt
+          env
+          
           
