--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -34,3 +34,6 @@ jobs:
           
       - name: Step 5 - List Ubuntu Environment Variables
         run: env
+        
+      - name: Step 6 - data layout
+        run: df
