--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with GitHub Actions
 
-name: ci2
+name: multi-steps-test
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
